tests/ui/attributes/crate-type-macro-call.stderr
error: attribute value must be a literal
  --> $DIR/crate-type-macro-call.rs:1:17
   |
LL | #![crate_type = foo!()]
   |                 ^^^^^^

error: aborting due to 1 previous error

